# Lab-3

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: benchmark.py  factorial_fibo.py  generation.py  main.py  queue.py  sorting_utils.py  sorts.py  stack.py
tests/: tests_lab3.py
